--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                                    background="transparent" speed="0.7"
                                    class="d-block w-100" loop autoplay></lottie-player>
                 </div>
-                <div class="col-12 col-md-5">
-                    <div class="text-center d-sm-none">
+                <div class="col-12 col-md-5 d-sm-none pt-5">
+                    <div class="text-center">
                         <a href="#" class="btn btn-primary btn-lg ps-5 pe-5" type="button">Ver Blog</a>
                     </div>
                 </div>
@@ -93,12 +93,12 @@
     <section id="analitycs" class="p-5 mb-2">
         <div class="container">
             <div class="row">
-                <div class="col-12 col-md-6">
+                <div class="col-12 col-md-6 order-2 order-md-1">
                     <lottie-player src="https://assets2.lottiefiles.com/packages/lf20_lphquaqr.json"
-                                   background="transparent" speed="0.7" style="width: 500px; height: 500px;"
-                                   class="d-block w-100" loop autoplay></lottie-player>
+                                   background="transparent" speed="0.7" class="d-block w-100" loop
+                                   autoplay></lottie-player>
                 </div>
-                <div class="col-12 col-md-6 pt-2 pt-md-5">
+                <div class="col-12 col-md-6 pt-2 pt-md-5 order-1 order-md-2">
                     <h2 class="fw-bold pt-2 pt-md-5 py-3 fs-2">Analítica digital</h2>
                     <p class="fs-5">El análisis digital se basa la recopilación, medición, análisis e interpretación de
                         datos que muestran el comportamiento de los usuarios en la web, las aplicaciones y las redes
@@ -108,9 +108,12 @@
                         años usando estas herramientas y ¡es muy divertido! <b>¡Mira cómo!</b>
                     </p>
 
-                    <div class="text-start mt-5">
+                    <div class=" text-start mt-5 d-none d-md-block">
                         <a href="#" class="btn btn-primary btn-lg ps-5 pe-5" type="button">Ver Artículos</a>
                     </div>
+                </div>
+                <div class="col-12 d-md-none text-center mt-5 order-3 pt-5">
+                    <a href="#" class="btn btn-primary btn-lg ps-5 pe-5" type="button">Ver Artículos</a>
                 </div>
             </div>
         </div>
@@ -119,15 +122,15 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 col-md-6 pt-2 pt-md-5">
-                    <h2 class="fw-bold pt-2 pt-md-5 py-3 text-end fs-2">Metaverso</h2>
+                    <h2 class="fw-bold pt-2 pt-md-5 py-3 text-md-end fs-2">Metaverso</h2>
                     <p class="fs-5">
                         El <strong>metaverso</strong> es la siguiente evolución del internet, ¿pero es mera especulación
                         o es el futuro?</p>
                     <p class="fs-5"> En mi opinión ¡es inevitable como Thanos!, te cuento porqué para que puedas
                         documentarte y ver
                         qué papel puedes jugar en él. </p>
-                    <p>¡También hay criptos!</p>
-                    <div class="text-end mt-5">
+                    <p class="fs-5">¡También hay <strong>criptomonedas</strong>!</p>
+                    <div class=" text-center text-md-end mt-5 d-none d-md-block">
                         <a href="#" class="btn btn-primary btn-lg ps-5 pe-5" type="button">Ver Artículos</a>
                     </div>
                 </div>
@@ -136,32 +139,89 @@
                                    background="transparent" speed="0.7"
                                    class="d-block w-100" loop autoplay></lottie-player>
                 </div>
+                <div class="col-12 d-md-none text-center mt-5 order-3 pt-5">
+                    <a href="#" class="btn btn-primary btn-lg ps-5 pe-5" type="button">Ver Artículos</a>
+                </div>
             </div>
         </div>
     </section>
     <section id="vida_digital" class="p-5 mb-2">
         <div class="container">
             <div class="row">
-                <div class="col-12 col-md-6">
+                <div class="col-12 col-md-6 order-2 order-md-1">
                     <lottie-player src="https://assets1.lottiefiles.com/packages/lf20_foppbvqc/data.json"
                                    background="transparent" speed="1" class="d-block w-100" loop
                                    autoplay></lottie-player>
                 </div>
-                <div class="col-12 col-md-6 pt-2 pt-md-5">
+                <div class="col-12 col-md-6 pt-2 pt-md-5 order-1 order-md-2">
                     <h2 class="fw-bold pt-2 pt-md-5 py-3 fs-2">Vida digital</h2>
                     <p class="fs-5">Trabajo 100% en remoto con una vida de nómada digital, algo que se ha puesto muy de
                         moda hoy en día, pero tiene aparte de sus ventajas sus inconvenientes aunque no te preocupes te
                         explico cómo superarlos</p>
 
-                    <div class="text-center">
+                    <div class="text-center d-none d-block">
                         <a href="#" class="btn btn-primary btn-lg ps-5 pe-5" type="button">Ver Artículos</a>
                     </div>
+                </div>
+                <div class="col-12 d-md-none text-center mt-5 order-3">
+                    <a href="#" class="btn btn-primary btn-lg ps-5 pe-5" type="button">Ver Artículos</a>
                 </div>
             </div>
         </div>
     </section>
+    <section id="youtube" class="p-5 mb-2">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 text-center">
+                    <h2>Youtube</h2>
+                    <p>Dispongo de 2 interesantes canales de youtube uno sobre <strong>analítica web</strong> con <b>tutoriales
+                        de GTM + GA4</b> y otro por pura diversión donde resumo los directos de twitch</p>
+                </div>
+                <div class="col-12 col-md-6 d-flex justify-content-center">
+                    <div class="card" style="width: 18rem;">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 d-flex justify-content-center">
+                    <div class="card" style="width: 18rem;">
+                        <img src="/img/logo.png" class="card-img-top" alt="logo canal youtube twitch"
+                             title="logo canal youtube twitch"/>
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 text-center">
+                    <h3>...y por supuesto el canal de twitch</h3>
+                    <div class="w-100 d-flex justify-content-center">
+                        <div class="card" style="width: 18rem;">
+                            <img src="/img/nombre_solo.png" class="card-img-top" alt="logo canal twitch"
+                                 title="logo canaltwitch">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk
+                                    of the card's content.</p>
+                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
 </main>
-<footer></footer>
+<footer class="p-5 bg-dark"></footer>
 <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
         integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
