--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="UTF-8"/>
+    <title>Marc Mayol</title>
+    <meta name="description" content="Blog personal sobre GA4, Google tagmanger, el metaverso y al vida digital"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <link rel="canonical" href="http://example.com/"/>
+    <meta name="robots" content="index, follow"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="Marc Mayol Home"/>
+    <meta property="og:description" content="Blog personal sobre GA4, Google tagmanger, el metaverso y al vida digital"/>
+    <meta property="og:image" content="/img/nombre_solo.png"/>
+    <meta property="og:url" content="https://www.marcmayol.com"/>
+    <meta property="og:site_name" content="Marc Mayol"/>
+    <!--css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous"/>
     <link href="/css/main.css" rel="stylesheet"/>
@@ -61,7 +71,7 @@
         </div>
     </nav>
 </header>
-<main class="container-fluid">
+<main class="container-fluid p-0">
     <section id="jumbotron" class="p-5 mb-2">
         <div class="container py-5">
             <div class="row">
@@ -159,7 +169,7 @@
                         moda hoy en día, pero tiene aparte de sus ventajas sus inconvenientes aunque no te preocupes te
                         explico cómo superarlos</p>
 
-                    <div class="text-center d-none d-block">
+                    <div class="text-start d-none d-md-block pt-5">
                         <a href="#" class="btn btn-primary btn-lg ps-5 pe-5" type="button">Ver Artículos</a>
                     </div>
                 </div>
@@ -172,14 +182,14 @@
     <section id="youtube" class="p-5 mb-2">
         <div class="container">
             <div class="row">
-                <div class="col-12 text-center">
-                    <h2>Youtube</h2>
-                    <p>Dispongo de 2 interesantes canales de youtube uno sobre <strong>analítica web</strong> con <b>tutoriales
+                <div class="col-12 text-center p-3">
+                    <h2 class="fs-2">Youtube</h2>
+                    <p class="fs-5">Dispongo de 2 interesantes canales de youtube uno sobre <strong>analítica web</strong> con <b>tutoriales
                         de GTM + GA4</b> y otro por pura diversión donde resumo los directos de twitch</p>
                 </div>
                 <div class="col-12 col-md-6 d-flex justify-content-center">
-                    <div class="card" style="width: 18rem;">
-                        <img src="..." class="card-img-top" alt="...">
+                    <div class="card cyt" style="width: 18rem;">
+                        <img src="/img/me.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -189,7 +199,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-md-6 d-flex justify-content-center">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card cyt" style="width: 18rem;">
                         <img src="/img/logo.png" class="card-img-top" alt="logo canal youtube twitch"
                              title="logo canal youtube twitch"/>
                         <div class="card-body">
@@ -201,9 +211,9 @@
                     </div>
                 </div>
                 <div class="col-12 text-center">
-                    <h3>...y por supuesto el canal de twitch</h3>
+                    <h3 class="fs-3 mt-5 p-4">...y por supuesto el canal de twitch</h3>
                     <div class="w-100 d-flex justify-content-center">
-                        <div class="card" style="width: 18rem;">
+                        <div class="card cyt" style="width: 18rem;">
                             <img src="/img/nombre_solo.png" class="card-img-top" alt="logo canal twitch"
                                  title="logo canaltwitch">
                             <div class="card-body">
