--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
     <meta name="robots" content="index, follow"/>
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="Marc Mayol Home"/>
-    <meta property="og:description" content="Blog personal sobre GA4, Google tagmanger, el metaverso y al vida digital"/>
+    <meta property="og:description"
+          content="Blog personal sobre GA4, Google tagmanger, el metaverso y al vida digital"/>
     <meta property="og:image" content="/img/nombre_solo.png"/>
     <meta property="og:url" content="https://www.marcmayol.com"/>
     <meta property="og:site_name" content="Marc Mayol"/>
     <!--css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"/>
     <link href="/css/main.css" rel="stylesheet"/>
     <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) {
@@ -183,55 +185,73 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 text-center p-3">
-                    <h2 class="fs-2">Youtube</h2>
-                    <p class="fs-5">Dispongo de 2 interesantes canales de youtube uno sobre <strong>analítica web</strong> con <b>tutoriales
+                    <h2 class="fs-2 pb-3">Youtube</h2>
+                    <p class="fs-5">Dispongo de 2 interesantes canales de youtube uno sobre <strong>analítica
+                        web</strong> con <b>tutoriales
                         de GTM + GA4</b> y otro por pura diversión donde resumo los directos de twitch</p>
                 </div>
-                <div class="col-12 col-md-6 d-flex justify-content-center">
-                    <div class="card cyt" style="width: 18rem;">
-                        <img src="/img/me.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                <div class="col-12 col-md-4 d-flex justify-content-center">
+                    <div class="card cyt">
+                        <img src="/img/me.jpg" class="card-img-top rounded-3" alt="logo canal analitica"
+                             title="logo canal analitica">
+                        <div class="card-body  text-center">
+                            <h3 class="card-title">
+                                Marc Mayol - Google Tag Manager & Analytics</h3>
+                            <p class="card-text">Aprende más rápido a usar Google Tag Manager y Google Analytics junto a
+                                mí. Si quieres saber cómo hacer un seguimiento de las distintas interacciones del sitio
+                                web con estas dos populares plataformas, has aterrizado en el canal de Youtube
+                                adecuado</p>
+                            <a href="https://www.youtube.com/channel/UCxQiW3DCfgM3cA1juzUmYvg"
+                               class="btn btn-primary"><i class="bi bi-youtube"></i> Ver canal</a>
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 d-flex justify-content-center">
-                    <div class="card cyt" style="width: 18rem;">
-                        <img src="/img/logo.png" class="card-img-top" alt="logo canal youtube twitch"
+                <div class="col-12 col-md-4 d-flex justify-content-center">
+                    <div class="card cyt">
+                        <img src="/img/logo.png" class="card-img-top rounded-3" alt="logo canal youtube twitch"
                              title="logo canal youtube twitch"/>
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <div class="card-body  text-center">
+                            <h3 class="card-title"> Remarcsx youtube</h3>
+                            <p class="card-text">Este es mi canal donde remuso las freakadas de twitch, si te vienes nos
+                                lo pasaras bien después del trabajo, viendo gameplays, reaccionando a vídeos y
+                                comentando la vida en general</p>
+                            <a href="https://www.youtube.com/channel/UC-1T-lfhuhkSY7Lk04dNAjQ"
+                               class="btn btn-primary"><i class="bi bi-youtube"></i> Ver canal </a>
                         </div>
                     </div>
                 </div>
-                <div class="col-12 text-center">
-                    <h3 class="fs-3 mt-5 p-4">...y por supuesto el canal de twitch</h3>
+                <div class="col-12 col-md-4 text-center">
                     <div class="w-100 d-flex justify-content-center">
-                        <div class="card cyt" style="width: 18rem;">
-                            <img src="/img/nombre_solo.png" class="card-img-top" alt="logo canal twitch"
+                        <div class="card cyt">
+                            <img src="/img/nombre_solo.png" class="card-img-top rounded-3" alt="logo canal twitch"
                                  title="logo canaltwitch">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk
-                                    of the card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <div class="card-body  text-center">
+                                <h3 class="card-title"> Remarcsx twitch</h3>
+                                <p class="card-text">Este es mi canal de freakadas, si te vienes nos lo podemos pasar
+                                    bien después del trabajo, jugando, reaccionando a vídeos y comentando la vida en
+                                    general o siemplemente venir a reirte en directo </p>
+                                <a href="https://www.youtube.com/c/RemarcsX" class="btn btn-primary"><i
+                                        class="bi bi-twitch"></i> Ver canal </a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
     </section>
 </main>
-<footer class="p-5 bg-dark"></footer>
+<footer class="p-5 bg-dark">
+    <div class="col-12 text-center fs-4 text-light"> Síqueme en:</div>
+    <div class=" col-12 d-flex justify-content-center">
+        <a href="https://twitter.com/remarcsx" target="_blank" class="social_icon-footer m-3 text-light"><i
+                class="bi bi-twitter"></i></a>
+        <a href="https://www.instagram.com/remarcsx/" target="_blank" class="social_icon-footer m-3 text-light"><i
+                class="bi bi-instagram"></i></a>
+        <a href="https://www.tiktok.com/@remarcsx" target="_blank" class="social_icon-footer m-3 text-light"><i
+                class="bi bi-tiktok"></i></a>
+    </div>
+    <div class="col-12 text-center fs-6 text-light">copyright @ marc mayol 2022</div>
+</footer>
 <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
         integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
