--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </noscript>
 <!-- End Google Tag Manager (noscript) -->
 
-<header class="py-3 mb-4 border-bottom">
+<header class="py-3 mb-4 border-bottom bg-light">
     <nav class="navbar navbar-expand-lg">
         <div class="container">
             <a class="navbar-brand fw-bolder fs-1" href="/">Marc Mayol</a>
@@ -53,16 +53,16 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarScroll">
                 <ul class="navbar-nav ms-auto d-flex" style="--bs-scroll-height: 100px;">
-                    <li class="nav-item">
+                    <li class="nav-item me-4">
                         <a class="nav-link " aria-current="page" href="#">Youtube</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item me-4">
                         <a class="nav-link" href="#">Blog</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item me-4">
                         <a class="nav-link" href="#analitycs">Analítica</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item me-4">
                         <a class="nav-link" href="#metaverse">Metaverso</a>
                     </li>
                     <li class="nav-item">
