--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8"/>
-    <title>Marc Mayol</title>
+    <title>Marc Mayol | Blog</title>
     <meta name="description" content="Blog personal sobre GA4, Google tagmanger, el metaverso y al vida digital"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <link rel="canonical" href="http://example.com/"/>
+    <link rel="canonical" href="http://marcmayol.com/"/>
     <meta name="robots" content="index, follow"/>
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="Marc Mayol Home"/>
@@ -54,10 +54,10 @@
             <div class="collapse navbar-collapse" id="navbarScroll">
                 <ul class="navbar-nav ms-auto d-flex" style="--bs-scroll-height: 100px;">
                     <li class="nav-item me-4">
-                        <a class="nav-link " aria-current="page" href="#">Youtube</a>
+                        <a class="nav-link " aria-current="page" href="#youtube">Youtube</a>
                     </li>
                     <li class="nav-item me-4">
-                        <a class="nav-link" href="#">Blog</a>
+                        <a class="nav-link" href="/blog">Blog</a>
                     </li>
                     <li class="nav-item me-4">
                         <a class="nav-link" href="#analitycs">Analítica</a>
@@ -96,7 +96,7 @@
                 </div>
                 <div class="col-12 col-md-5 d-sm-none pt-5">
                     <div class="text-center">
-                        <a href="#" class="btn btn-primary btn-lg ps-5 pe-5" type="button">Ver Blog</a>
+                        <a href="/blog" class="btn btn-primary btn-lg ps-5 pe-5" type="button">Ver Blog</a>
                     </div>
                 </div>
             </div>
@@ -259,6 +259,5 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"
         integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK"
         crossorigin="anonymous"></script>
-
 </body>
 </html>
