--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
                     <li class="nav-item me-4">
                         <a class="nav-link " aria-current="page" href="#youtube">Youtube</a>
                     </li>
-                    <li class="nav-item me-4">
+                    <li class="nav-item me-md-4">
                         <a class="nav-link" href="/blog">Blog</a>
                     </li>
-                    <li class="nav-item me-4">
+                    <li class="nav-item me-md-4">
                         <a class="nav-link" href="#analitycs">Analítica</a>
                     </li>
-                    <li class="nav-item me-4">
+                    <li class="nav-item me-md-4">
                         <a class="nav-link" href="#metaverse">Metaverso</a>
                     </li>
                     <li class="nav-item">
