test  rewrite acces 0.1

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8"/>
-    <title>Marc Mayol | Blog</title>
+    <title>Marc Mayol</title>
     <meta name="description" content="Blog personal sobre GA4, Google tagmanger, el metaverso y al vida digital"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="canonical" href="http://marcmayol.com/"/>
