--- a/index.html
+++ b/index.html
@@ -1,1 +1,263 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/test-react-with-lb.github.io/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/test-react-with-lb.github.io/logo192.png"/><link rel="manifest" href="/test-react-with-lb.github.io/manifest.json"/><title>React App</title><script defer="defer" src="/test-react-with-lb.github.io/static/js/main.695e6f43.js"></script><link href="/test-react-with-lb.github.io/static/css/main.fa95dbb9.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8"/>
+    <title>Marc Mayol</title>
+    <meta name="description" content="Blog personal sobre GA4, Google tagmanger, el metaverso y al vida digital"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <link rel="canonical" href="http://marcmayol.com/"/>
+    <meta name="robots" content="index, follow"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="Marc Mayol Home"/>
+    <meta property="og:description"
+          content="Blog personal sobre GA4, Google tagmanger, el metaverso y al vida digital"/>
+    <meta property="og:image" content="/img/nombre_solo.png"/>
+    <meta property="og:url" content="https://www.marcmayol.com"/>
+    <meta property="og:site_name" content="Marc Mayol"/>
+    <!--css -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"/>
+    <link href="/css/main.css" rel="stylesheet"/>
+    <!-- Google Tag Manager -->
+    <script>(function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({
+            'gtm.start':
+                new Date().getTime(), event: 'gtm.js'
+        });
+        var f = d.getElementsByTagName(s)[0],
+            j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : '';
+        j.async = true;
+        j.src =
+            'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+        f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-MD3MVBL');</script>
+    <!-- End Google Tag Manager -->
+</head>
+<body>
+<!-- Google Tag Manager (noscript) -->
+<noscript>
+    <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MD3MVBL"
+            height="0" width="0" style="display:none;visibility:hidden"></iframe>
+</noscript>
+<!-- End Google Tag Manager (noscript) -->
+
+<header class="py-3 mb-4 border-bottom bg-light">
+    <nav class="navbar navbar-expand-lg">
+        <div class="container">
+            <a class="navbar-brand fw-bolder fs-1" href="/">Marc Mayol</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
+                    aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarScroll">
+                <ul class="navbar-nav ms-auto d-flex" style="--bs-scroll-height: 100px;">
+                    <li class="nav-item me-4">
+                        <a class="nav-link " aria-current="page" href="#youtube">Youtube</a>
+                    </li>
+                    <li class="nav-item me-md-4">
+                        <a class="nav-link" href="/blog">Blog</a>
+                    </li>
+                    <li class="nav-item me-md-4">
+                        <a class="nav-link" href="#analitycs">Analítica</a>
+                    </li>
+                    <li class="nav-item me-md-4">
+                        <a class="nav-link" href="#metaverse">Metaverso</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#vida_digital">Vida digital</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</header>
+<main class="container-fluid p-0">
+    <section id="jumbotron" class="p-5 mb-2">
+        <div class="container py-5">
+            <div class="row">
+                <div class="col-12"><h1 class="fw-bold fs-1">Analítica, Metaverso y Vida digital</h1></div>
+                <div class="col-12 col-md-6 py-md-5">
+                    <p class="fs-5">Una pizca de analítica digital de la mano de <strong>GA4</strong> y
+                        <strong>Google Tag Manager</strong>.</p>
+                    <p class="fs-5">
+                        Una cucharada de locura y diversión del Metaverso. Y así tienes la <strong>vida digital</strong>
+                        de Marc Mayol
+                    </p>
+                    <div class="d-none d-sm-block mt-5 text-end pe-5">
+                        <a href="#" class="btn btn-primary btn-lg ps-5 pe-5" type="button">Ver Blog</a>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6">
+                    <lottie-player src="https://assets6.lottiefiles.com/packages/lf20_jgerfaec.json"
+                                   background="transparent" speed="0.7"
+                                   class="d-block w-100" loop autoplay></lottie-player>
+                </div>
+                <div class="col-12 col-md-5 d-sm-none pt-5">
+                    <div class="text-center">
+                        <a href="/blog" class="btn btn-primary btn-lg ps-5 pe-5" type="button">Ver Blog</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="analitycs" class="p-5 mb-2">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-md-6 order-2 order-md-1">
+                    <lottie-player src="https://assets2.lottiefiles.com/packages/lf20_lphquaqr.json"
+                                   background="transparent" speed="0.7" class="d-block w-100" loop
+                                   autoplay></lottie-player>
+                </div>
+                <div class="col-12 col-md-6 pt-2 pt-md-5 order-1 order-md-2">
+                    <h2 class="fw-bold pt-2 pt-md-5 py-3 fs-2">Analítica digital</h2>
+                    <p class="fs-5">El análisis digital se basa la recopilación, medición, análisis e interpretación de
+                        datos que muestran el comportamiento de los usuarios en la web, las aplicaciones y las redes
+                        sociales.</p>
+                    <h3 class="fw-4 pt-2 pb-3">¿como puedes hacer eso?</h3>
+                    <p class="fs-5">con <strong>Google analytics 4</strong> y <strong>Google tag manager</strong>, llevo
+                        años usando estas herramientas y ¡es muy divertido! <b>¡Mira cómo!</b>
+                    </p>
+
+                    <div class=" text-start mt-5 d-none d-md-block">
+                        <a href="#" class="btn btn-primary btn-lg ps-5 pe-5" type="button">Ver Artículos</a>
+                    </div>
+                </div>
+                <div class="col-12 d-md-none text-center mt-5 order-3 pt-5">
+                    <a href="#" class="btn btn-primary btn-lg ps-5 pe-5" type="button">Ver Artículos</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="metaverse" class="p-5 mb-2">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-md-6 pt-2 pt-md-5">
+                    <h2 class="fw-bold pt-2 pt-md-5 py-3 text-md-end fs-2">Metaverso</h2>
+                    <p class="fs-5">
+                        El <strong>metaverso</strong> es la siguiente evolución del internet, ¿pero es mera especulación
+                        o es el futuro?</p>
+                    <p class="fs-5"> En mi opinión ¡es inevitable como Thanos!, te cuento porqué para que puedas
+                        documentarte y ver
+                        qué papel puedes jugar en él. </p>
+                    <p class="fs-5">¡También hay <strong>criptomonedas</strong>!</p>
+                    <div class=" text-center text-md-end mt-5 d-none d-md-block">
+                        <a href="#" class="btn btn-primary btn-lg ps-5 pe-5" type="button">Ver Artículos</a>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6">
+                    <lottie-player src="https://assets8.lottiefiles.com/packages/lf20_838ilk1b.json"
+                                   background="transparent" speed="0.7"
+                                   class="d-block w-100" loop autoplay></lottie-player>
+                </div>
+                <div class="col-12 d-md-none text-center mt-5 order-3 pt-5">
+                    <a href="#" class="btn btn-primary btn-lg ps-5 pe-5" type="button">Ver Artículos</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="vida_digital" class="p-5 mb-2">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-md-6 order-2 order-md-1">
+                    <lottie-player src="https://assets1.lottiefiles.com/packages/lf20_foppbvqc/data.json"
+                                   background="transparent" speed="1" class="d-block w-100" loop
+                                   autoplay></lottie-player>
+                </div>
+                <div class="col-12 col-md-6 pt-2 pt-md-5 order-1 order-md-2">
+                    <h2 class="fw-bold pt-2 pt-md-5 py-3 fs-2">Vida digital</h2>
+                    <p class="fs-5">Trabajo 100% en remoto con una vida de nómada digital, algo que se ha puesto muy de
+                        moda hoy en día, pero tiene aparte de sus ventajas sus inconvenientes aunque no te preocupes te
+                        explico cómo superarlos</p>
+
+                    <div class="text-start d-none d-md-block pt-5">
+                        <a href="#" class="btn btn-primary btn-lg ps-5 pe-5" type="button">Ver Artículos</a>
+                    </div>
+                </div>
+                <div class="col-12 d-md-none text-center mt-5 order-3">
+                    <a href="#" class="btn btn-primary btn-lg ps-5 pe-5" type="button">Ver Artículos</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="youtube" class="p-5 mb-2">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 text-center p-3">
+                    <h2 class="fs-2 pb-3">Youtube</h2>
+                    <p class="fs-5">Dispongo de 2 interesantes canales de youtube uno sobre <strong>analítica
+                        web</strong> con <b>tutoriales
+                        de GTM + GA4</b> y otro por pura diversión donde resumo los directos de twitch</p>
+                </div>
+                <div class="col-12 col-md-4 d-flex justify-content-center">
+                    <div class="card cyt">
+                        <img src="/img/me.jpg" class="card-img-top rounded-3" alt="logo canal analitica"
+                             title="logo canal analitica">
+                        <div class="card-body  text-center">
+                            <h3 class="card-title">
+                                Marc Mayol - Google Tag Manager & Analytics</h3>
+                            <p class="card-text">Aprende más rápido a usar Google Tag Manager y Google Analytics junto a
+                                mí. Si quieres saber cómo hacer un seguimiento de las distintas interacciones del sitio
+                                web con estas dos populares plataformas, has aterrizado en el canal de Youtube
+                                adecuado</p>
+                            <a href="https://www.youtube.com/channel/UCxQiW3DCfgM3cA1juzUmYvg"
+                               class="btn btn-primary"><i class="bi bi-youtube"></i> Ver canal</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4 d-flex justify-content-center">
+                    <div class="card cyt">
+                        <img src="/img/logo.png" class="card-img-top rounded-3" alt="logo canal youtube twitch"
+                             title="logo canal youtube twitch"/>
+                        <div class="card-body  text-center">
+                            <h3 class="card-title"> Remarcsx youtube</h3>
+                            <p class="card-text">Este es mi canal donde remuso las freakadas de twitch, si te vienes nos
+                                lo pasaras bien después del trabajo, viendo gameplays, reaccionando a vídeos y
+                                comentando la vida en general</p>
+                            <a href="https://www.youtube.com/channel/UC-1T-lfhuhkSY7Lk04dNAjQ"
+                               class="btn btn-primary"><i class="bi bi-youtube"></i> Ver canal </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4 text-center">
+                    <div class="w-100 d-flex justify-content-center">
+                        <div class="card cyt">
+                            <img src="/img/nombre_solo.png" class="card-img-top rounded-3" alt="logo canal twitch"
+                                 title="logo canaltwitch">
+                            <div class="card-body  text-center">
+                                <h3 class="card-title"> Remarcsx twitch</h3>
+                                <p class="card-text">Este es mi canal de freakadas, si te vienes nos lo podemos pasar
+                                    bien después del trabajo, jugando, reaccionando a vídeos y comentando la vida en
+                                    general o siemplemente venir a reirte en directo </p>
+                                <a href="https://www.youtube.com/c/RemarcsX" class="btn btn-primary"><i
+                                        class="bi bi-twitch"></i> Ver canal </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</main>
+<footer class="p-5 bg-dark">
+    <div class="col-12 text-center fs-4 text-light"> Síqueme en:</div>
+    <div class=" col-12 d-flex justify-content-center">
+        <a href="https://twitter.com/remarcsx" target="_blank" class="social_icon-footer m-3 text-light"><i
+                class="bi bi-twitter"></i></a>
+        <a href="https://www.instagram.com/remarcsx/" target="_blank" class="social_icon-footer m-3 text-light"><i
+                class="bi bi-instagram"></i></a>
+        <a href="https://www.tiktok.com/@remarcsx" target="_blank" class="social_icon-footer m-3 text-light"><i
+                class="bi bi-tiktok"></i></a>
+    </div>
+    <div class="col-12 text-center fs-6 text-light">copyright @ marc mayol 2022</div>
+</footer>
+<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
+        integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"
+        integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK"
+        crossorigin="anonymous"></script>
+</body>
+</html>
