--- a/twitch-frases-random/index.html
+++ b/twitch-frases-random/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<body style="background-color: black; text-align: center;">
+<body style="background-color: black; text-align: center; display: flex; justify-content: center;  padding-top: 15%;">
 <script>
     function shuffle(array) {
         let currentIndex = array.length,  randomIndex;
