--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Marc Mayol</title>
     <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) {
         w[l] = w[l] || [];
@@ -42,6 +42,7 @@
         f.parentNode.insertBefore(j, f);
     })(window, document, 'script', 'dataLayer', 'GTM-MD3MVBL');</script>
     <!-- End Google Tag Manager -->
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
