incoporación dajuste de las rutas de navegación y loading en el blog

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="application-name" content="Marc Mayol blog personal"/>
     <meta name="theme-color" content="#ffffff"/>
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
+    <!-- Favicon principal -->
+    <link rel="icon" type="image/x-icon" href="%PUBLIC_URL%/favicon.ico"/>
+    <!-- Favicon para navegadores estándar -->
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png"/>
+
+    <!-- Iconos para dispositivos Apple -->
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png"/>
+
+    <!-- Iconos para Android/Chrome -->
+    <link rel="icon" type="image/png" sizes="192x192" href="%PUBLIC_URL%/android-chrome-192x192.png"/>
+    <link rel="icon" type="image/png" sizes="512x512" href="%PUBLIC_URL%/android-chrome-512x512.png"/>
+
+    <!-- Meta etiqueta para navegadores Android -->
+    <meta name="theme-color" content="#ffffff">
     <meta name="robots" content="index,follow"/>
     <meta name="googlebot" content="index,follow"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
